vlib/v/parser/tests/register_ierror_struct.vv
struct IError {
	msg string
}

fn main() {
	println('Hello World')
}
